# evomap

./: .gitignore  .readthedocs.yml  1.21.2  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build.py  pyproject.toml  setup.py
docs/: Makefile  car application.ipynb  car_application.ipynb  conduct.md  conf.py  contributing.md  dynamic mapping.ipynb  dynamic_mapping.ipynb  evomap_demo.ipynb  example.ipynb  index.md  make.bat  quickstart.ipynb  requirements.txt  static mapping.ipynb  static_mapping.ipynb
src/evomap/: __init__.py  datasets.py  metrics.py  preprocessing.py  printer.py  transform.py
src/evomap/data/: __init__.py
src/evomap/data/cars/: customer_preference_ratings.csv  perceptual_attribute_ratings.csv
src/evomap/data/tnic_sample_tech/: tnic_sample_technology.csv  tnic_sample_technology_with_netflix.csv
src/evomap/data/tnic_snapshot/: cluster.npy  size.npy
src/evomap/data/tnic_snapshot_small/: cluster.npy  sim_mat.npy
src/evomap/mapping/: __init__.py  _cmds.py  _core.py  _mds.py  _optim.py  _regression.py  _sammon.py  _tsne.py  _vos.py
src/evomap/mapping/evomap/: __init__.py  _core.py  _evomds.py  _evosammon.py  _evotsne.py  _utils.c  _utils.py  _utils.pyx  setup.py
src/marketmaps/: __init__.py  datasets.py  marketmaps.py  metrics.py  preprocessing.py  printer.py
src/marketmaps/data/cars/: customer_preference_ratings.csv  perceptual_attribute_ratings.xlsx
src/marketmaps/data/tnic_sample/: labels.npy
src/marketmaps/data/tnic_snapshot_small/: labels.npy
src/marketmaps/mapping/: __init__.py  cmds.py  cmdscale.py  sammon.py
src/marketmaps/mapping/evomap/: __init__.py  _core.py  _evotsne.py  _utils.c  core.py  evomds.py  evosammon.py  evotsne.py  setup.py
tests/: test_marketmaps.py
