[tool.poetry]
name = "evomap"
version = "0.1.0"
description = "A Python Toolbox for Evolving Mapping of Relationship Data"
authors = ["Maximilian Matthe"]
license = "MIT"
readme = "README.md"
build = 'build.py'

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = ">=1.21.2, <1.22"
pandas = ">=1.3.3"
matplotlib = ">=3.5.1"
numba = "^0.55.1"
ipykernel = ">=6.13.0"
scipy = ">=1.7.0"
seaborn = ">=0.11.2"
Cython = ">=0.29.28"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^0.13.2", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
