[build-system]
requires = ["setuptools", "numpy", "poetry-core>=1.4.0", "Cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "evomap"
version = "0.1.1"
description = "A Python Toolbox for Mapping Evolving Relationship Data"
authors = ["Maximilian Matthe, Daniel M. Ringel, and Bernd Skiera"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"


[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
numpy = "1.21.6"
pandas = "1.3.3"
matplotlib = ">=3.5.1"
numba = "^0.55.1"
ipykernel = ">=6.13.0"
scipy = ">=1.7.0"
seaborn = ">=0.11.2"
Cython = "^0.29.33"
statsmodels = "^0.13.2"
setuptools = "^67.4.0"
sphinx-book-theme = "^0.3.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^0.13.2", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
Cython = "^0.29.33"
