[build-system]
requires = ["setuptools", "numpy==1.21.6", "poetry-core>=1.4.0", "Cython==0.29.33"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "evomap"
version = "0.3.0"
description = "A Python Toolbox for Mapping Evolving Relationship Data"
authors = ["Maximilian Matthe <mpmatthe@iu.edu>, Daniel M. Ringel <>, and Bernd Skiera <>"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.9.0, <3.11"
numpy = "1.21.6"
pandas = "1.3.3"
matplotlib = "3.5.1"
numba = "0.55.1"
ipykernel = "6.13.0"
seaborn = "0.11.2"
cython = "0.29.33"
statsmodels = "0.13.2"
setuptools = "68.2.0"
sphinx = "7.3.7"
sphinx-book-theme = "1.1.2"
scipy = "^1.11.2"
scikit-learn = "1.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = "1.1.0"
sphinx-autoapi = "3.0.0"
sphinx-rtd-theme = "2.0.0"
cython = "0.29.33"

